packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__safe_global_methods.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


		import { component$, useSignal } from '@qwik.dev/core';
		export default component$(() => {
			const count = useSignal(123);
			return (
				<>
					<div title={window.document.title}></div>
					<div title={window.document.getElementById(count.value).title}></div>
				</>
			);
		});
		
============================= test.tsx_test_component_LUXeXe0DQrg.ts (ENTRY POINT)==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const _hf0 = (p0)=>window.document.getElementById(p0.value).title;
const _hf0_str = "window.document.getElementById(p0.value).title";
export const test_component_LUXeXe0DQrg = ()=>{
    const count = useSignal(123);
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, {
            title: window.document.title
        }, null, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, {
            title: _fnSignal(_hf0, [
                count
            ], _hf0_str)
        }, null, 3, null)
    ], 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;mBAOiB,OAAO,QAAQ,CAAC,cAAc,CAAC,GAAM,KAAK,EAAE,KAAK;;0CALtC;IACzB,MAAM,QAAQ,UAAU;IACxB,qBACC;sBACC,WAAC;YAAI,OAAO,OAAO,QAAQ,CAAC,KAAK;;sBACjC,WAAC;YAAI,KAAK;;;;;AAGb\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    88,
    287
  ]
}
*/
============================= test.ts ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(_qrl_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAEE,6BAAe,8CAQZ\"}")
== DIAGNOSTICS ==

[]
