packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_convert_jsx_events.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 4743
expression: output
---
==INPUT==


		import { component$ } from '@qwik.dev/core';

		const ManyEventsComponent = component$(() => {
			return (
				<div>
					<button
						onClick$={() => {}}
						onDblClick$={() => {}}
					>
						click
					</button>
					<button
						onClick$={() => {}}
						onBlur$={() => {}}
						on-anotherCustom$={() => {}}
						document:onFocus$={() => {}}
						window:onClick$={() => {}}
					>
						click
					</button>
				</div>
			);
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_ManyEventsComponent_component_ndbrzxiyG3g = /*#__PURE__*/ qrl(()=>import("./test.tsx_ManyEventsComponent_component_ndbrzxiyG3g"), "ManyEventsComponent_component_ndbrzxiyG3g");
//
/*#__PURE__*/ componentQrl(_qrl_ManyEventsComponent_component_ndbrzxiyG3g);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;cAG8B\"}")
============================= test.tsx_ManyEventsComponent_component_ndbrzxiyG3g.js (ENTRY POINT)==

import { _noopQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
const _qrl_ManyEventsComponent_component_div_button_q_d_focus_fR03UCeyKSs = /*#__PURE__*/ _noopQrl("ManyEventsComponent_component_div_button_q_d_focus_fR03UCeyKSs");
const _qrl_ManyEventsComponent_component_div_button_q_e_another_custom_ZC5Gt2v0qH0 = /*#__PURE__*/ _noopQrl("ManyEventsComponent_component_div_button_q_e_another_custom_ZC5Gt2v0qH0");
const _qrl_ManyEventsComponent_component_div_button_q_e_blur_LVmlrV6TsTY = /*#__PURE__*/ _noopQrl("ManyEventsComponent_component_div_button_q_e_blur_LVmlrV6TsTY");
const _qrl_ManyEventsComponent_component_div_button_q_e_click_1_BOulU3QpiyA = /*#__PURE__*/ _noopQrl("ManyEventsComponent_component_div_button_q_e_click_1_BOulU3QpiyA");
const _qrl_ManyEventsComponent_component_div_button_q_e_click_z0X12CPQocg = /*#__PURE__*/ _noopQrl("ManyEventsComponent_component_div_button_q_e_click_z0X12CPQocg");
const _qrl_ManyEventsComponent_component_div_button_q_e_dblclick_VZGqMEVFles = /*#__PURE__*/ _noopQrl("ManyEventsComponent_component_div_button_q_e_dblclick_VZGqMEVFles");
const _qrl_ManyEventsComponent_component_div_button_q_w_click_DjpgJ0bcgJs = /*#__PURE__*/ _noopQrl("ManyEventsComponent_component_div_button_q_w_click_DjpgJ0bcgJs");
//
export const ManyEventsComponent_component_ndbrzxiyG3g = ()=>{
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        /*#__PURE__*/ _jsxSorted("button", null, {
            "q-e:click": _qrl_ManyEventsComponent_component_div_button_q_e_click_z0X12CPQocg,
            "q-e:dblclick": _qrl_ManyEventsComponent_component_div_button_q_e_dblclick_VZGqMEVFles
        }, "click", 3, null),
        /*#__PURE__*/ _jsxSorted("button", null, {
            "q-e:click": _qrl_ManyEventsComponent_component_div_button_q_e_click_1_BOulU3QpiyA,
            "q-e:blur": _qrl_ManyEventsComponent_component_div_button_q_e_blur_LVmlrV6TsTY,
            "q-e:another-custom": _qrl_ManyEventsComponent_component_div_button_q_e_another_custom_ZC5Gt2v0qH0,
            "q-d:focus": _qrl_ManyEventsComponent_component_div_button_q_d_focus_fR03UCeyKSs,
            "q-w:click": _qrl_ManyEventsComponent_component_div_button_q_w_click_DjpgJ0bcgJs
        }, "click", 3, null)
    ], 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;yDAGyC;IACtC,qBACC,WAAC;sBACA,WAAC;YACA,WAAQ;YACR,cAAW;WACX;sBAGD,WAAC;YACA,WAAQ;YACR,UAAO;YACP,oBAAiB;YAHlB,WAQS;YART,WAQS;WAFR;;AAKJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_ndbrzxiyG3g",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component",
  "hash": "ndbrzxiyG3g",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_ndbrzxiyG3g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    444
  ]
}
*/
== DIAGNOSTICS ==

[]
